--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -172,6 +172,7 @@
             </ion-thumbnail>
             <ion-label>
               <h3>{{user.DisplayName}}</h3>
+              <p>{{user.UserName}}</p>
               <!-- <p class="ion-text-wrap">{{user.About}}</p> -->
               <p class="ion-text-wrap">100 Posts - 1.1k Connections (test)</p>
             </ion-label>
