--- a/src/app/pages/sidemenu/events/event-view/event-view.page.html
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.html
@@ -60,7 +60,7 @@
 
     <ion-item lines="none">
       <ion-text>
-        <p>{{event.Desription}}</p>
+        <p>{{event.Description}}</p>
       </ion-text>
     </ion-item>
 
