--- a/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
+++ b/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
@@ -35,8 +35,12 @@
     <div class="input-container">
       <ion-label class="input-label">Description</ion-label>
       <ion-item lines="none">
-        <ion-input autocapitalize="on" class="input" placeholder="desription" type="text" name="Desription"
-          [(ngModel)]="eventItem.Desription" maxlength="30"></ion-input>
+        <!-- <ion-input autocapitalize="on" class="input" placeholder="desription" type="text" name="Desription"
+          [(ngModel)]="eventItem.Description" minlength="80" maxlength="1200">
+        </ion-input> -->
+        <ion-textarea autocapitalize="on" class="input" placeholder="description" type="text" name="Description"
+          [(ngModel)]="eventItem.Description" maxlength="1200">
+        </ion-textarea>
       </ion-item>
     </div>
 
@@ -53,9 +57,10 @@
       <ion-row>
         <ion-col size="3.5">
           <ion-item color="none" class="input" lines="none">
-            <ion-input style="text-align: center;" placeholder="DD" inputmode="numeric" #sday="ngModel" name="day"
+            <ion-input style="text-align: center;" placeholder="DD" type="text" inputmode="numeric" #sday="ngModel" name="day"
               (ionChange)="isStartDateGreaterOrEqualToToday()" [(ngModel)]="_startDate.day"
-              pattern="^(0?[1-9]|1\d|2\d|3[01])$" maxlength="2"></ion-input>
+              pattern="^(0?[1-9]|1\d|2\d|3[01])$" maxlength="2" required>
+            </ion-input>
           </ion-item>
 
         </ion-col>
@@ -63,7 +68,7 @@
           <ion-item color="none" class="input" lines="none">
             <ion-input style="text-align: center;" placeholder="MM" inputmode="numeric" #smonth="ngModel" name="month"
               (ionChange)="isStartDateGreaterOrEqualToToday()" [(ngModel)]="_startDate.month"
-              pattern="^(?:0?[1-9]|1[0-2])$" maxlength="2">
+              pattern="^(?:0?[1-9]|1[0-2])$" maxlength="2" required>
             </ion-input>
           </ion-item>
         </ion-col>
@@ -71,8 +76,8 @@
           <ion-item color="none" class="input" lines="none">
             <ion-input style="text-align: center;" placeholder="YYYY" inputmode="numeric" #syear="ngModel" name="year"
               (ionChange)="isStartDateGreaterOrEqualToToday()" [(ngModel)]="_startDate.year" pattern="^\d{4}$"
-              maxlength="4"></ion-input>
-
+              maxlength="4" required>
+            </ion-input>
           </ion-item>
         </ion-col>
 
@@ -103,6 +108,62 @@
       </ion-row>
     </ion-grid>
 
+    <!-- End date -->
+    <ion-label class="input-label">End date</ion-label>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="3.5">
+          <ion-item color="none" class="input" lines="none">
+            <ion-input style="text-align: center;" placeholder="DD" inputmode="numeric" #eday="ngModel" name="endDay"
+              (ionChange)="isEndDateGreaterOrEqualToToday()" [(ngModel)]="_endDate.day"
+              pattern="^(0?[1-9]|1\d|2\d|3[01])$" maxlength="2" required>
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="3.5">
+          <ion-item color="none" class="input" lines="none">
+            <ion-input style="text-align: center;" placeholder="MM" inputmode="numeric" #emonth="ngModel" name="endMonth"
+              (ionChange)="isEndDateGreaterOrEqualToToday()" [(ngModel)]="_endDate.month"
+              pattern="^(?:0?[1-9]|1[0-2])$" maxlength="2" required>
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="4.5">
+          <ion-item color="none" class="input" lines="none">
+            <ion-input style="text-align: center;" placeholder="YYYY" inputmode="numeric" #eyear="ngModel" name="endYear"
+              (ionChange)="isEndDateGreaterOrEqualToToday()" [(ngModel)]="_endDate.year" pattern="^\d{4}$"
+              maxlength="4" required>
+            </ion-input>
+          </ion-item>
+        </ion-col>
+
+      </ion-row>
+    </ion-grid>
+
+    <!-- <div *ngIf="endDateError.is_show && !(eday?.invalid && (eday.dirty || eday.touched)) && !(emonth?.invalid && (emonth.dirty || emonth.touched)) && !(eyear?.invalid && (eyear.dirty || eyear.touched))" class="error-message">
+      {{endDateError.message}}
+    </div> -->
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="3.5">
+          <div *ngIf="eday?.invalid && (eday.dirty || eday.touched)" class="error-message">
+            Invalid day
+          </div>
+        </ion-col>
+        <ion-col size="3.5">
+          <div *ngIf="emonth?.invalid && (emonth.dirty || emonth.touched)" class="error-message">
+            Invalid End month
+          </div>
+        </ion-col>
+        <ion-col size="4.5">
+          <div *ngIf="eyear?.invalid && (eyear.dirty || eyear.touched)" class="error-message">
+            Invalid year
+          </div>
+
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
     <!--  Time  -->
     <ion-label class="input-label">Time</ion-label>
     <ion-item lines="none" style="margin-left: 13px;">
@@ -117,14 +178,16 @@
             <ion-item color="none" class="input" lines="none">
               <ion-input style="text-align: center;" placeholder="HH" inputmode="numeric" maxlength="2"
                 #starthh="ngModel" (ionChange)="isStartTimeIsGreaterThanCurrentTime()" name="shh"
-                [(ngModel)]="startTime.shh" pattern="^(?:0?[1-9]|1[0-2])$"></ion-input>
+                [(ngModel)]="startTime.shh" pattern="^(?:0?[1-9]|1[0-2])$" required>
+              </ion-input>
             </ion-item>
           </ion-col>
           <ion-col class="ion-no-padding" size="2.5">
             <ion-item color="none" class="input" lines="none">
               <ion-input style="text-align: center;" placeholder="MM" inputmode="numeric" maxlength="2"
                 #startmm="ngModel" (ionChange)="isStartTimeIsGreaterThanCurrentTime()" name="smm"
-                [(ngModel)]="startTime.smm" pattern="^(?:[0-5]?[0-9])$"></ion-input>
+                [(ngModel)]="startTime.smm" pattern="^(?:[0-5]?[0-9])$" required>
+              </ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="0.5"></ion-col>
@@ -168,14 +231,16 @@
             <ion-item color="none" class="input" lines="none">
               <ion-input style="text-align: center;" placeholder="HH" inputmode="numeric" #endhh="ngModel"
                 (ionChange)="isEndTimeGreaterThanStartTime()" name="ehh" [(ngModel)]="endTime.ehh"
-                pattern="^(?:0?[1-9]|1[0-2])$" maxlength="2"></ion-input>
+                pattern="^(?:0?[1-9]|1[0-2])$" maxlength="2" required>
+              </ion-input>
             </ion-item>
           </ion-col>
           <ion-col class="ion-no-padding" size="2.5">
             <ion-item color="none" class="input" lines="none">
               <ion-input style="text-align: center;" placeholder="MM" inputmode="numeric" #endmm="ngModel"
                 (ionChange)="isEndTimeGreaterThanStartTime()" name="emm" [(ngModel)]="endTime.emm"
-                pattern="^(?:[0-5]?[0-9])$" maxlength="2"></ion-input>
+                pattern="^(?:[0-5]?[0-9])$" maxlength="2" required>
+              </ion-input>
             </ion-item>
           </ion-col>
           <ion-col size="0.5"></ion-col>
