--- a/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.scss
+++ b/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.scss
@@ -20,6 +20,15 @@ ion-title {
   letter-spacing: 0.32px;
   color: #285078;
 }
+ion-textarea {
+  --color: #285078;
+  --placeholder-color: #A8A8A8;
+  --placeholder-opacity: .8;
+  --padding-end: 19px;
+  --padding-start: 19px;
+  font-size: 15px;
+  min-height: 127px;
+}
 ion-content {
   --padding-start: 10px;
   --padding-end: 10px;
