--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content style="border-radius: 100px 100px 0 0;">
   <div style="width: 100%;height:100%;" class="whiteblue">
     <div class="mapclass" style="position: relative;height: 100%;width:100%;">
 
@@ -93,18 +93,20 @@
     </div>
   </div>
 
-  <ion-modal #sonarSettingModal [initialBreakpoint]="0.50" [breakpoints]="[0, 0.25, 0.5, 0.75]">
+  <ion-modal #sonarSettingModal [initialBreakpoint]="0.50" [breakpoints]="[0, 0.25, 0.5, 0.75]" style="z-index: 0;">
     <ng-template>
       <sonar-settings (onCloseSetting)="closeSetting()"></sonar-settings>
     </ng-template>
   </ion-modal>
 
-  <ion-modal #markerDetailModal [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]">
-    <ng-template>
-      <div (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
-        <app-marker-detail [markerCurrentIndex]="markerCurrentIndex" [markerList]="mainResultFromSearch"
+  <ion-modal #markerDetailModal id="markerDetailModal" class="custom-modal" [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]" style=" overflow: visible;" handle="false">
+    <ng-template style="margin-top: 50px;">
+      
+      <div  (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')" style="background-color:#F6F6F6" >
+        <app-marker-detail [markerCurrentIndex]="markerCurrentIndex" [markerList]="mainResultFromSearch" 
         (onCloseDetails)="closeMarkerDetails()" (onShowPrevious)="onShowPreviousMarker()" (onShowNext)="onShowNextMarker()"></app-marker-detail>
       </div>
     </ng-template>
   </ion-modal>
 </ion-content>
+
