Revert "updated create event page, added username in search page"
This reverts commit accc3f578a6d5ae36108e6be44f95d426aed36d6.

--- a/src/app/pages/sidemenu/events/event-view/event-view.page.html
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.html
@@ -60,7 +60,7 @@
 
     <ion-item lines="none">
       <ion-text>
-        <p>{{event.Description}}</p>
+        <p>{{event.Desription}}</p>
       </ion-text>
     </ion-item>
 
