--- a/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
+++ b/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
@@ -38,10 +38,18 @@
         <!-- <ion-input autocapitalize="on" class="input" placeholder="desription" type="text" name="Desription"
           [(ngModel)]="eventItem.Description" minlength="80" maxlength="1200">
         </ion-input> -->
-        <ion-textarea autocapitalize="on" class="input" placeholder="description" type="text" name="Description"
-          [(ngModel)]="eventItem.Description" maxlength="1200">
+        <ion-textarea autocapitalize="on" class="input" placeholder="description" type="text" #Description="ngModel" name="Description"
+          [(ngModel)]="eventItem.Description" minlength="80" maxlength="1200">
         </ion-textarea>
       </ion-item>
+    </div>
+    <div *ngIf="Description.invalid && (Description.dirty || Description.touched)" class="error-message">
+      <div *ngIf="Description.errors?.['required']">
+        Description is required.
+      </div>
+      <div *ngIf="Description.errors?.['minlength']">
+        Enter atleast 80 character.
+      </div>
     </div>
 
     <!-- traits -->
@@ -140,9 +148,9 @@
       </ion-row>
     </ion-grid>
 
-    <!-- <div *ngIf="endDateError.is_show && !(eday?.invalid && (eday.dirty || eday.touched)) && !(emonth?.invalid && (emonth.dirty || emonth.touched)) && !(eyear?.invalid && (eyear.dirty || eyear.touched))" class="error-message">
+    <div *ngIf="endDateError.is_show && !(eday?.invalid && (eday.dirty || eday.touched)) && !(emonth?.invalid && (emonth.dirty || emonth.touched)) && !(eyear?.invalid && (eyear.dirty || eyear.touched))" class="error-message">
       {{endDateError.message}}
-    </div> -->
+    </div>
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size="3.5">
@@ -304,7 +312,7 @@
     <ion-label class="input-label">Viewable by </ion-label>
     <ion-item color="none" class="input" lines="none" id="viewable-by">
       <ion-label>
-        <h3 *ngIf="eventItem.VisibleTo">{{eventItem.VisibleTo}}</h3>
+        <h3 *ngIf="eventItem.VisibleTo">{{CommonService.getPrivacyFullValue(eventItem.VisibleTo)}}</h3>
         <h3 *ngIf="!eventItem.VisibleTo">select</h3>
       </ion-label>
       <ion-buttons>
@@ -363,8 +371,8 @@
       <ion-radio-group [value]="eventItem.VisibleTo" [(ngModel)]="eventItem.VisibleTo" (ionChange)="selectedVisibleTo($event)" mode="md">
        
         <ion-item lines="none" *ngFor="let i of privacyTypes">
-          <ion-label [ngClass]="{'selected': (eventItem.VisibleTo==i.title)}">{{i.title}}</ion-label>
-          <ion-radio slot="start" value="{{i.title}}"></ion-radio>
+          <ion-label [ngClass]="{'selected': (eventItem.VisibleTo == i.value)}">{{i.title}}</ion-label>
+          <ion-radio slot="start" value="{{i.value}}"></ion-radio>
         </ion-item>
       </ion-radio-group>
     </ion-list>
