--- a/src/app/pages/sidemenu/events/event-list/event-list.page.html
+++ b/src/app/pages/sidemenu/events/event-list/event-list.page.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="display-flex ion-align-items-center">
     <ion-buttons slot="start">
-      <!-- <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
-      </ion-back-button> -->
-      <app-notification-icon></app-notification-icon>
+      <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
+      </ion-back-button>
+      <!-- <app-notification-icon></app-notification-icon> -->
     </ion-buttons>
     <ion-title>Events</ion-title>
     <ion-buttons slot="end" id="main-content">
