--- a/src/app/pages/sidemenu/settings-privacy/sonar/sonar.page.html
+++ b/src/app/pages/sidemenu/settings-privacy/sonar/sonar.page.html
@@ -112,8 +112,8 @@
   </ng-container>
 </ion-content>
 
-<ion-footer class="create-btn" *ngIf="loaded">
+<!-- <ion-footer class="create-btn" *ngIf="loaded">
   <ion-button shape="round" expand="block" color="primary" (click)="saveUserPrivacy()">
     Save
   </ion-button>
-</ion-footer>
+</ion-footer> -->
