--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -93,7 +93,7 @@
     </div>
   </div>
 
-  <ion-modal id="sonarSettingModal" #sonarSettingModal [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]" >
+  <ion-modal id="sonarSettingModal" #sonarSettingModal [initialBreakpoint]="0.62" [breakpoints]="[0, 0.62]" >
     <ng-template>
       <sonar-settings (onCloseSetting)="closeSetting()"></sonar-settings>
     </ng-template>
