--- a/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.html
+++ b/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.html
@@ -1,7 +1,8 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="display-flex ion-align-items-center">
     <ion-buttons slot="start">
-      <app-notification-icon></app-notification-icon>
+      <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg"></ion-back-button>
+      <!-- <app-notification-icon></app-notification-icon> -->
     </ion-buttons>
     <ion-title>Sales Listing</ion-title>
      <ion-buttons slot="end" >
@@ -132,8 +133,10 @@
   <br>
   <br>
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button  [disabled]="!isShowAddButton" color="primary" (click)="createItem()">
-      <ion-icon class="add-post-icon" name="add"></ion-icon>
+    <!-- [disabled]="!isShowAddButton" -->
+    <ion-fab-button   color="primary" (click)="createItem()">
+      <ion-icon name="add"></ion-icon>
+      <!-- class="add-post-icon" -->
     </ion-fab-button>
   </ion-fab>
 
