--- a/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.scss
+++ b/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.scss
@@ -77,13 +77,13 @@ ion-content {
     width: 60px;
     right: 25px;
     & > ion-fab-button {
-      --background: #03A9F5;
-      --border-radius: 10px;
-      --transform: rotate(45deg);
-      --box-shadow: none;
-      & > ion-icon {
-        height: 70%;
-        width: 70%;
+      margin: 5px;
+      --border-radius: 6px;
+      width: 50px;
+      height: 50px;
+      transform: rotate(45deg);
+      margin-right: 19px;
+      ion-icon {
         transform: rotate(45deg);
       }
     }
