--- a/src/app/pages/sidemenu/events/event-view/event-view.page.html
+++ b/src/app/pages/sidemenu/events/event-view/event-view.page.html
@@ -94,7 +94,7 @@
           <h4>Location</h4>
         </ion-text>
         <ion-text>
-          <p class="ion-no-margin">{{event.location}} location</p>
+          <!-- <p class="ion-no-margin">{{event.location}} location</p> -->
         </ion-text>
       </div>
     </ion-item> 
@@ -104,8 +104,8 @@
           <h4>Offset location</h4>
         </ion-text>
         <ion-text>
-          <p class="ion-no-margin"*ngIf="!event.locationOffset">Disabled</p>
-          <p class="ion-no-margin"*ngIf="event.locationOffset">Enabled</p>
+          <!-- <p class="ion-no-margin"*ngIf="!event.locationOffset">Disabled</p>
+          <p class="ion-no-margin"*ngIf="event.locationOffset">Enabled</p> -->
         </ion-text>
       </div>
     </ion-item>
